samples/_failures_safe/1761002188_e3afc0_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_4310e309.c: In function ‘main’:
./samples/SAFE/__tmp_4310e309.c:173:16: error: missing terminating " character
  173 |         printf("Token %d
      |                ^~~~~~~~~
./samples/SAFE/__tmp_4310e309.c:173:9: error: expected expression at end of input
  173 |         printf("Token %d
      |         ^~~~~~
./samples/SAFE/__tmp_4310e309.c:173:9: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_4310e309.c:173:9: error: expected declaration or statement at end of input
